# hydrostatics

./: .gitignore  README.md  build.py  pdm_build.py  pyproject.toml  setup.py
data/hydrostatics_data/: F50HullPRT.dxf  F50HullPRT.stl  F50HullSTB.dxf  F50HullSTB.stl  F50HullSplittedSTB.dxf  F50WingFlap.dxf  F50WingFlap.stl  F50WingME.dxf  F50WingME.stl  all.glb  capsize.hydro  cube_2x2x2.stl  prueba.hydro
docs/: Makefile  Readme.md  conf.py  index.rst
docs/hydrostatics/: equilibrium_help.rst  hydrostatics.rst
docs/hydrostatics/Usage/: gui_help.rst  models_help.rst  overview.rst
docs/source/: index.rst
hydrostatics/: analysis.py  gui.py  mesh_processing.py  models.py  optimize.py  transformations.py
hydrostatics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
hydrostatics/fast_calcs/: clipping_calcs.c  clipping_calcs.pyx  volume_calcs.c  volume_calcs.pyx
hydrostatics/gui_src/: design.ui  github-markdown.css
tests/: test_documentation.md  test_mesh_processing.py  test_models.py  test_optimize.py  test_transformations.py
