[tool.poetry]
name = "hydrostatics"
version = "1.0.1"
description = ""
authors = []
build = "build.py"
include = ["hydrostatics/gui_src/*", "docs/*"]

[tool.poetry.scripts]
hydro = "hydrostatics.gui:hydro"

[tool.poetry.dependencies]
python = "^3.7"
Cython = "^0.29.21"

# Science libs
numpy = "^1.20.1"
scipy = "^1.5.4"
pandas = "^1.1.5"

# 3D meshing
trimesh = "^3.5.5"
ezdxf = "^0.10.2"
pyvista = "^0.28.1"

# Required only for hydrostatics GUI
PyQt5 = { version = "^5.15.4" }
PyQtWebEngine = { version = "^5.15.4" }
pyvistaqt = { version = "^0.5.0" }
python-markdown-math = { version = "^0.8" }

# Utilities
markdown = "^3.1.1"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
# Pytest
pytest = "^6.2.1"
pytest-profiling = "^1.7.0"
pytest-cov = "^2.12.0"

# Code autoformatting
black = "^20.8b1"

# Interactivity
IPython = "^7.19.0"
ipykernel = "^5.4.2"
notebook = "^6.2.0"
jupyterlab = "^3.0.9"
ipywidgets = "^7.6.3"
snakeviz = "^2.1.0"

# Documenation
sphinx = "^3.4.3"
autodoc-pydantic = "^1.1.1"
esbonio = { version = "^0.5.1" }

# New
deepdiff = "^5.5.0"

[build-system]
requires = ["poetry_core>=1.0.0", "Cython", "numpy", "setuptools", "sphinx"]
build-backend = "poetry.core.masonry.api"
