[project]
name = "hydrostatics"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Michael Sundvick", email = "msundvick@sailgp.com" }]
dependencies = [
    "numpy>=1.10.4",
    "scipy>=1.1.2",
    "pandas>=1.1.3",
    "trimesh>=3.5.5,<4",
    "ezdxf>=0.10.2,<1",
    "pyvista>=0.28.1,<0.29",
    "PyQt5==5.15.1",
    "vtk<9.2.7",
    "PyQtWebEngine>=5.15.0",
    "pyvistaqt>=0.5.0,<0.6",
    "python-markdown-math==0.8",
    "markdown==3.1.1",
    "matplotlib>=3.5.1",
]
requires-python = ">=3.7.0,<3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest==6.2.1",
    "pytest-profiling==1.7.0",
    "pytest-cov==2.12.0",
    "black==20.8b1",
    "IPython==7.19.0",
    "ipykernel==5.4.0",
    "notebook==6.2.0",
    "jupyterlab==3.0.9",
    "ipywidgets==7.6.3",
    "snakeviz==2.1.0",
    "sphinx==3.4.3",
    "autodoc-pydantic==1.1.1",
    "esbonio==0.5.1",
    "deepdiff==5.5.0",
]
[build-system]
requires = ["Cython==0.29.21", "numpy==1.20.1", "setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pdm]
distribution = true

[tool.pdm.build]
run-setuptools = true
